--- a/conta.html
+++ b/conta.html
@@ -66,6 +66,7 @@
       </ul>
     </div>
   </nav>
+   <h2 class="subtitulo">Cadastre-se</h2>
   <div class="container-fluid">
     <div class="conta">
       <form onsubmit="enviaformulario(this)">
