--- a/depoimentos.html
+++ b/depoimentos.html
@@ -67,7 +67,7 @@
 		<div class="row">
 			<ul class="navbar-nav m r-auto">
 				<li class="nav-item active">
-					<a class="botao nav-link" href="conta.html">Publicar com conta<span class="sr-only">(current)</span></a>
+					<a class="botao nav-link" href="login.html">Publicar com conta<span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item active">
 					<a class="botao nav-link" href="depoimentos.html">Publicar anonimamente<span class="sr-only">(current)</span></a>
