--- a/login.html
+++ b/login.html
@@ -66,6 +66,7 @@
       </ul>
     </div>
   </nav>
+  <h2 class="subtitulo">Login</h2>
   <div class="container-fluid">
     <div class="conta">
       <form onsubmit="autenticar(this)">
@@ -76,13 +77,13 @@
         <div class="form-group">
           <label for="password">Senha</label>
           <input type="password" class="form-control" id="password" placeholder="Senha" required>
-        </div>
-        
+        </div>     
         <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
     </div>
   </div>
-
+      <h3 class="texto_padrao">Ainda não tem cadastro?<a class= "link" href = "conta.html"> Cadastre-se aqui!</a></h3><br>
+ 
 
   <div id="rodape">
     <h3 class="texto_contato"> Contato </h3>
