--- a/mulheres.html
+++ b/mulheres.html
@@ -57,6 +57,7 @@
 	A custódia cumprida por quem comete tal crime pode variar de 1 a 2 anos.</h3>
 	<br>
 	<img src="img/wm.jpg" id="imgm">
+	<h3 class="texto_padrao"> Fonte:<a class= "link" href = "https://event.webinarjam.com/register/8/vlg9pco">https://event.webinarjam.com/register/8/vlg9pcos</a></h3>
 	<br> 
 	<h2 class="subtitulo">O que é assédio? </h2>
 	<h3 class="texto_padrao">O assédio é definido pelo constrangimento de um indivíduo na intenção de obter vantagem ou favorecimento sexual, prevalecendo-se o agente de sua condição de superior. Vale ressaltar que para ser classificado como assédio apenas quando a vítima não se encontra conivente com a situação. 
@@ -70,7 +71,10 @@
 		<br><br>
 		O <mark>assédio moral</mark> se trata da humilhação sofrida pela vítima afetando sua dignidade, é bem comum do ambiente de trabalho em situações que consiste na humilhação de um funcionário por exemplo, que é exposto por seus patrões ou até mesmo por outros funcionários. Não existe lei específica no Brasil que ampare este tipo de assédio, mas em alguns casos, podem ser classificados como crime de danos morais.
 		<br><br>
-		O <mark>assédio sexual</mark> caracteriza-se pelo não consentimento da vítima na realização de um ação ou ato sexual, este tipo inclui desde o contato físico em si até um comentário classificado como pejorativo na intenção de praticar o ato. Já existe uma lei no Brasil para  punir quem comete tal crime
+		O <mark>assédio sexual</mark> caracteriza-se pelo não consentimento da vítima na realização de um ação ou ato sexual, este tipo inclui desde o contato físico em si até um comentário classificado como pejorativo na intenção de praticar o ato. Já existe uma lei no Brasil para  punir quem comete tal crime.</br>
+
+		<img src="img/mulheres.jpg" id="imgm">
+		<h3 class="texto_padrao"> Fonte: <a class= "link" href = "https://www.etsy.com/listing/826902687/diverse-women-portrait-different-skin?epik=dj0yJnU9cE9yYzNYcWJIanZpOVZlUjE0QTN4enNsVVQyM1Z6Q18mcD0wJm49eXlZZG51VUdORjcxc0thV3pJMWRRQSZ0PUFBQUFBR0NBZUUw"> https://www.etsy.com/listing/826902687/diverse-women-portrait-different-skin?epik=dj0yJnU9cE9yYzNYcWJIanZpOVZlUjE0QTN4enNsVVQyM1Z6Q18mcD0wJm49eXlZZG51VUdORjcxc0thV3pJMWRRQSZ0PUFBQUFBR0NBZUUw</a></h3>
 	</h3>
 	<br>
 	<h2 class="subtitulo">Leis para as mulheres</h2>
@@ -90,42 +94,104 @@
 		Art. 2º. Esta lei entra em vigor noventa dias após sua publicação.
 		<br><br>
 		<h2 class="subtitulo">Plataformas semelhantes</h2>
-		<h3 class="texto_padrao"><a href= "https://www.sosmulher.sp.gov.br/">SOS Mulheres</a>- O SOS MULHER é focado no apoio à mulher em situação de vulnerabilidade e tem como base três pilares: segurança, saúde e independência financeira.
+		<div class="container-fluid">
+		<div class="card mb-3 img-thumbnail">
+			<div class="row g-0">
+				<div class="col-md-5">
+				<a target="_blank" href="https://www.sosmulher.sp.gov.br/index.aspx"><img src="img/sosmulher.jpg" class="imgs" alt="SOS Mulher"></a>
+				</div>
+				<div class="col-md-7">
+					<div class="card-body">
+						<h5 class="card-title">SOS Mulher</h5> O SOS MULHER é focado no apoio à mulher em situação de vulnerabilidade e tem como base três pilares: segurança, saúde e independência financeira.
 			<br>
 			A plataforma é uma ampliação do projeto que foi iniciado em março de 2019 pelo Governo do Estado com o lançamento do aplicativo que permite que as vítimas de violência doméstica peçam ajuda para polícia apertando apenas um botão do celular por cinco segundos.
 			<br>
 		Nesta etapa serão disponibilizadas orientações importantes sobre assuntos que visam garantir proteção em relação às principais formas de violência listadas na Lei Maria da Penha: física, psicológica, moral, sexual e patrimonial.</h3>
 		<br>
-		<h3 class="texto_padrao"><a href= "https://associacaofalamulher.wixsite.com/associacaofalamulher">Associação Fala Mulher</a>-A psicóloga e teóloga Suzanne Marie Mailloux, de nacionalidade canadense, veio para o Brasil, em 1995, com o objetivo de desenvolver trabalhos sociais, em São Paulo. No desenrolar do trabalho, Suzanne observou o contexto de violência doméstica vivenciado por algumas crianças e mulheres, o que a motivou, a partir de uma perspectiva de gênero, a se aprofundar na seara das relações domésticas e familiares. Como fruto desse aprofundamento, em 2004, Suzanne, reunida com outras mulheres fundou a Associação Fala Mulher.
-		<br>
-		<h3 class="texto_padrao"><a href= "https://casadeisabel.org.br/">Casa da Isabel</a>-Em conformidade com o Estatuto Social da Organização  Art. 2°, II – “A CASA DE ISABEL tem por objetivo fomentar ou realizar atividades de Promoção, Proteção e Assistência à Saúde e Especialidades, sem Finalidades Lucrativas, através das ações de pesquisa, ensino, entre outras ações sociais, de forma contínua de caráter comunitário. Através de parcerias com Órgãos Públicos e Entidades congêneres. Realizando ações a Projetos especiais voltados à Promoção, Proteção e Recuperação de pessoas com Transtornos decorrentes do Abuso de Substâncias Psicoativas.
-		<br>
-		<h3 class="texto_padrao"><a href= "https://www.mapadoacolhimento.org/">Mapa do Acolhimento</a>-Somos uma rede de solidariedade que conecta mulheres que sofrem ou sofreram violência de gênero a psicólogas e advogadas dispostas a ajudá-las de forma voluntária. 
-		<br>
-		<h3 class="texto_padrao"><a href= "https://www.meteacolher.org/">Mete a colher</a>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+						<p class="card-text"></p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="card mb-3 img-thumbnail">
+			<div class="row g-0">
+				<div class="col-md-7">
+					<div class="card-body">
+						<h5 class="card-title">Associação Fala Mulher</h5> A psicóloga e teóloga Suzanne Marie Mailloux, de nacionalidade canadense, veio para o Brasil, em 1995, com o objetivo de desenvolver trabalhos sociais, em São Paulo. No desenrolar do trabalho, Suzanne observou o contexto de violência doméstica vivenciado por algumas crianças e mulheres, o que a motivou, a partir de uma perspectiva de gênero, a se aprofundar na seara das relações domésticas e familiares. Como fruto desse aprofundamento, em 2004, Suzanne, reunida com outras mulheres fundou a Associação Fala Mulher.
+						<p class="card-text"></p>
+					</div>
+				</div>
+				<div class="col-md-5">
+				<a target="_blank" href="https://associacaofalamulher.wixsite.com/associacaofalamulher"><img src="img/falamulher.jpg" class="imgs" alt="Associação Fala Mulher"></a>
+				</div>
+			</div>
+		</div>
+		<div class="card mb-3 img-thumbnail">
+			<div class="row g-0">
+				<div class="col-md-5">			
+				<a target="_blank" href="https://casadeisabel.org.br/"><img src="img/casadeisabel.jpg" class="imgs" alt="Casa de Isabel"></a>
+				</div>
+				<div class="col-md-7">
+					<div class="card-body">
+						<h5 class="card-title">Casa de Isabel</h5> Em conformidade com o Estatuto Social da Organização  Art. 2°, II – “A CASA DE ISABEL tem por objetivo fomentar ou realizar atividades de Promoção, Proteção e Assistência à Saúde e Especialidades, sem Finalidades Lucrativas, através das ações de pesquisa, ensino, entre outras ações sociais, de forma contínua de caráter comunitário. Através de parcerias com Órgãos Públicos e Entidades congêneres. Realizando ações a Projetos especiais voltados à Promoção, Proteção e Recuperação de pessoas com Transtornos decorrentes do Abuso de Substâncias Psicoativas.
+			
+						<p class="card-text"></p>
+					</div>
+				</div>
+			</div>
+		</div>
+				<div class="card mb-3 img-thumbnail">
+			<div class="row g-0">
+				<div class="col-md-7">
+					<div class="card-body">
+						<h5 class="card-title">Mapa do Acolhimento</h5> Somos uma rede de solidariedade que conecta mulheres que sofrem ou sofreram violência de gênero a psicólogas e advogadas dispostas a ajudá-las de forma voluntária. 
+						<p class="card-text"></p>
+					</div>
+				</div>
+					<div class="col-md-5">
+				<a target="_blank" href="https://www.mapadoacolhimento.org/"><img src="img/mapadoacolhimento.jpg" class="imgs" alt=" Mapa do Acolhimento"></a>
+			</div>
+			</div>
+		</div>
+		<div class="card mb-3 img-thumbnail">
+			<div class="row g-0">
+				<div class="col-md-5">
+					<img src="img/sosmulher.jpg" class="imgs" alt="Mete a Colher">
+				</div>
+				<div class="col-md-7">
+					<div class="card-body">
+						<h5 class="card-title">Mete a colher</h5>
+						<p class="card-text"></p>
+					</div>
+				</div>
+			</div>
 		</div>
 
-		<div id="rodape">
-			<h3 class="texto_contato"> Contato </h3>
-			<a href="mailto:contatoisy.site@gmail.com"> 
-				<img src="img/email.svg" id="imge"> 
-				<p id="textoR">Envie um e-mail para ISY</p>
-			</a>
+		
+		
 
-		</div>
-	</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+					</div>	
+					</div>
+
+					<div id="rodape">
+						<h3 class="texto_contato"> Contato </h3>
+						<a href="mailto:contatoisy.site@gmail.com"> 
+							<img src="img/email.svg" id="imge"> 
+							<p id="textoR">Envie um e-mail para ISY</p>
+						</a>
+
+					</div>
+				</body>
