--- a/sobre.html
+++ b/sobre.html
@@ -56,6 +56,7 @@
 	<br>
 	<h2 class="subtitulo"> Sobre o site </h2>
 
+
 	<h3 class="texto_padrao"> O desenvolvimento desse site foi pensado baseando-se nos relatos de assédio sofrido por mulheres na sua convivência em sociedade,visando amenizar quaisquer problemas relacionados a todo tipo de assédio. Também com o intuito de proporcionar apoio umas as outras, apresentando um local onde podem se sentir confortável para ler e relatar seus depoimentos anonimamente ou não.
 		<br>
 
@@ -63,10 +64,11 @@
 	</h3>
 	<br>
 	
-	<img src="img/sobre.jpg" id="imgm">
+	<img src="img/girlPower.jpg" id="imgm">
+	<h3 class="texto_padrao"> Fonte: <a class= "link" href = "https://www.rawpixel.com/image/2034148/girl-power-stickers-set">https://www.rawpixel.com/image/2034148/girl-power-stickers-set</a></h3>
 
 	<br>
-	<h3 class="texto_padrao"> O nosso site será usado como uma ferramenta a mais que vem para somar com projetos como o mete a colher(<a href="https://meteacolher.org/">https://meteacolher.org/</a>) ou até mesmo o papel desempenhado pela delegacia da mulher, para ser mais uma plataforma de colaboração na denúncia e no diálogo entre mulheres que enfrentam essas situações em diversos lugares e buscam um meio para relatar sobre o ocorrido e buscar ajuda psicológica e judiciária, que será disponibilizada na nossa plataforma profissionais destes ramos que se propuseram a participar desta iniciativa.
+	<h3 class="texto_padrao"> O nosso site será usado como uma ferramenta a mais que vem para somar com projetos como o <a class= "link" href = "depoimentos.html">Mete a colher</a> ou até mesmo o papel desempenhado pela delegacia da mulher, para ser mais uma plataforma de colaboração na denúncia e no diálogo entre mulheres que enfrentam essas situações em diversos lugares e buscam um meio para relatar sobre o ocorrido e buscar ajuda psicológica e judiciária, que será disponibilizada na nossa plataforma profissionais destes ramos que se propuseram a participar desta iniciativa.
 		<br>
 		Nos baseamos em pesquisas realizadas com mulheres para validar a importância  de um ambiente adequado para relatarem suas experiências e seu convívio  social da forma mais segura e privada, e com base nas respostas adquiridas construímos nosso site. 
 	</h3>
