--- a/sobre.html
+++ b/sobre.html
@@ -64,8 +64,9 @@
 	</h3>
 	<br>
 	
+	<a href ="https://www.rawpixel.com/image/2034148/girl-power-stickers-set">
 	<img src="img/girlPower.jpg" id="imgm">
-	<h3 class="texto_padrao"> Fonte: <a class= "link" href = "https://www.rawpixel.com/image/2034148/girl-power-stickers-set">https://www.rawpixel.com/image/2034148/girl-power-stickers-set</a></h3>
+	</a>
 
 	<br>
 	<h3 class="texto_padrao"> O nosso site será usado como uma ferramenta a mais que vem para somar com projetos como o <a class= "link" href = "depoimentos.html">Mete a colher</a> ou até mesmo o papel desempenhado pela delegacia da mulher, para ser mais uma plataforma de colaboração na denúncia e no diálogo entre mulheres que enfrentam essas situações em diversos lugares e buscam um meio para relatar sobre o ocorrido e buscar ajuda psicológica e judiciária, que será disponibilizada na nossa plataforma profissionais destes ramos que se propuseram a participar desta iniciativa.
