--- a/depoimentos.html
+++ b/depoimentos.html
@@ -88,6 +88,7 @@
 		<div id="depoimentos"> 
 		</div>
 	</div>
+	<button onclick="curtir(1);" class="btn btn-primary">Publicar</button>
 	<div class="col-12">
 		<h1>
 		</div>
