--- a/conta.html
+++ b/conta.html
@@ -23,9 +23,11 @@
 
 </head>
 
-<body>
+<body onload="exibeNome()">
   <div class="titulo">
     <p> ISY - I support you </p>
+    <spam> Olá, </spam>
+    <spam id="nome"></spam>
   </div>
   <nav class="navbar navbar-expand-lg navbar-light pb-4 mb-4">
     <a class="navbar-brand" href="#"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
@@ -33,7 +35,7 @@
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
- <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav m r-auto">
       <li class="nav-item">
         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
@@ -66,7 +68,7 @@
       </ul>
     </div>
   </nav>
-   <h2 class="subtitulo">Cadastre-se</h2>
+  <h2 class="subtitulo">Cadastre-se</h2>
   <div class="container-fluid">
     <div class="conta">
       <form onsubmit="enviaformulario(this)">
