--- a/depoimentos.html
+++ b/depoimentos.html
@@ -8,11 +8,12 @@
 	<link rel="icon" type="imagem/png" href="img/icon.png" />
 	<link href="css/style.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/solid.css"
-		integrity="sha384-LA8Ug4T/nhVkyhrSmSirsoAo9iDrBk8E7U80aSPeD+w3vO8PzOJIS6agGcbIwwX0" crossorigin="anonymous">
+	integrity="sha384-LA8Ug4T/nhVkyhrSmSirsoAo9iDrBk8E7U80aSPeD+w3vO8PzOJIS6agGcbIwwX0" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/fontawesome.css"
-		integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
+	integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
+	
 	<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
@@ -22,89 +23,91 @@
 
 </head>
 
-<body onload="carregaDepoimentos()">
+<body onload="carregaDepoimentos(), exibeNome()">
 	<div class="titulo">
 		<p> ISY - I support you </p>
+		<spam> Olá, </spam>
+		<spam id="nome"></spam>
 	</div>
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<a class="navbar-brand" href="#"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav m r-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item ">
-					<a class="nav-link ativo" href="depoimentos.html">Depoimentos<span
-							class="sr-only">(current)</span></a>
+		aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav m r-auto">
+			<li class="nav-item">
+				<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item ">
+				<a class="nav-link ativo" href="depoimentos.html">Depoimentos<span
+					class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item ">
 					<a class="nav-link" href="mulheres.html">Leis e Direitos das Mulheres<span
+						class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="mapa.html">Mapeamento<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="galeria.html">Galeria<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="#rodape">Contato<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="conta.html">Cadastrar<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="login.html">Login<span class="sr-only">(current)</span></a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<br>
+		<h2 class="subtitulo">Feed de depoimentos</h2>
+		<div class="container">
+			<div class="row">
+				<ul class="navbar-nav m r-auto">
+					<li class="nav-item active">
+						<a class="botao nav-link" href="login.html">Publicar com conta<span
 							class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item ">
-					<a class="nav-link" href="mapa.html">Mapeamento<span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item ">
-					<a class="nav-link" href="galeria.html">Galeria<span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item ">
-					<a class="nav-link" href="#rodape">Contato<span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item ">
-					<a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item ">
-					<a class="nav-link" href="conta.html">Cadastrar<span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item ">
-					<a class="nav-link" href="login.html">Login<span class="sr-only">(current)</span></a>
-				</li>
-			</ul>
-		</div>
-	</nav>
-	<br>
-	<h2 class="subtitulo">Feed de depoimentos</h2>
-	<div class="container">
-		<div class="row">
-			<ul class="navbar-nav m r-auto">
-				<li class="nav-item active">
-					<a class="botao nav-link" href="login.html">Publicar com conta<span
-							class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item active">
-					<a class="botao nav-link" href="depoimentos.html">Publicar anonimamente<span
-							class="sr-only">(current)</span></a>
-				</li>
-			</ul>
-		</div>
-	</div>
-	<div class="container">
-		<div class="col-12">
-			<form onsubmit="gravarDepoimento(this)">
-				<div class="form-group">
-					<label>Publique aqui</label>
-					<textarea class="form-control" id="depoimento" rows="10"></textarea>
+						</li>
+						<li class="nav-item active">
+							<a class="botao nav-link" href="depoimentos.html">Publicar anonimamente<span
+								class="sr-only">(current)</span></a>
+							</li>
+						</ul>
+					</div>
 				</div>
-				<button type="submit" class="btn btn-primary">Publicar</button>
-			</form>
+				<div class="container">
+					<div class="col-12">
+						<form onsubmit="gravarDepoimento(this)">
+							<div class="form-group">
+								<label>Publique aqui</label>
+								<textarea class="form-control" id="depoimento" rows="10"></textarea>
+							</div>
+							<button type="submit" class="btn btn-primary">Publicar</button>
+						</form>
+					</div>
+					<div id="depoimentos">
+					</div>
+				</div>
+
+				.
+			</div>
+			<div id="rodape">
+				<h3 class="texto_contato"> Contato </h3>
+				<a href="mailto:contatoisy.site@gmail.com">
+					<img src="img/email.svg" id="imge" alt="logo de e-mail">
+					<p id="textoR">Envie um e-mail para ISY</p>
+				</a>
+
+			</div>
+
 		</div>
-		<div id="depoimentos">
-		</div>
-	</div>
-
-		.
-	</div>
-	<div id="rodape">
-		<h3 class="texto_contato"> Contato </h3>
-		<a href="mailto:contatoisy.site@gmail.com">
-			<img src="img/email.svg" id="imge" alt="logo de e-mail">
-			<p id="textoR">Envie um e-mail para ISY</p>
-		</a>
-
-	</div>
-
-	</div>
