--- a/galeria.html
+++ b/galeria.html
@@ -8,11 +8,15 @@
 	<link href="css/style.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+	<script src="scripts/script.js"> </script>
 </head>
 
-<body>
+<body onload="exibeNome()">
 	<div class="titulo">
 		<p> ISY - I support you </p>
+		<spam> Olá, </spam>
+		<spam id="nome"></spam>
 	</div>
 	<nav class="navbar navbar-expand-lg navbar-light pb-4 mb-4">
 		<a class="navbar-brand" href="#"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
