--- a/sobre.html
+++ b/sobre.html
@@ -9,10 +9,14 @@
 	<link href="css/style.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+	<script src="scripts/script.js"> </script>
 </head>
-<body>
+<body onload="exibeNome()">
 	<div class="titulo">
 		<p> ISY - I support you </p>
+		<spam> Olá, </spam>
+		<spam id="nome"></spam>
 	</div>
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<a class="navbar-brand" href="#"><img src="img/icon.png" alt="icone do projeto ISY" class="icone"></a>
@@ -65,7 +69,7 @@
 	<br>
 	
 	<a href ="https://www.rawpixel.com/image/2034148/girl-power-stickers-set">
-	<img src="img/girlPower.jpg" id="imgm">
+		<img src="img/girlPower.jpg" id="imgm">
 	</a>
 
 	<br>
