--- a/conta.html
+++ b/conta.html
@@ -26,7 +26,6 @@
 <body onload="exibeNome()">
   <div class="titulo">
     <p> ISY - I support you </p>
-    <spam> Olá, </spam>
     <spam id="nome"></spam>
   </div>
   <nav class="navbar navbar-expand-lg navbar-light pb-4 mb-4">
@@ -74,7 +73,7 @@
       <form onsubmit="enviaformulario(this)">
         <div class="form-group">
           <label for="Nome">Nome</label>
-          <input type="text" class="form-control" id="nome"  placeholder="Nome" required>
+          <input type="text" class="form-control" id="nomeusuaria"  placeholder="Nome" required>
         </div>
         <div class="form-group">
           <label for="idade">Idade</label>
