--- a/conta.html
+++ b/conta.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body onload="exibeNome()">
+<body onload="iniciaAplicacao();">
   <div class="titulo">
     <p> ISY - I support you </p>
     <spam id="nome"></spam>
