--- a/depoimentos.html
+++ b/depoimentos.html
@@ -23,10 +23,9 @@
 
 </head>
 
-<body onload="carregaDepoimentos(), exibeNome()">
+<body onload="carregaDepoimentos(), iniciaAplicação()">
 	<div class="titulo">
 		<p> ISY - I support you </p>
-		<spam> Olá, </spam>
 		<spam id="nome"></spam>
 	</div>
 	<nav class="navbar navbar-expand-lg navbar-light">
