--- a/galeria.html
+++ b/galeria.html
@@ -12,10 +12,9 @@
 	<script src="scripts/script.js"> </script>
 </head>
 
-<body onload="exibeNome()">
+<body onload="iniciaAplicacao();">
 	<div class="titulo">
 		<p> ISY - I support you </p>
-		<spam> Olá, </spam>
 		<spam id="nome"></spam>
 	</div>
 	<nav class="navbar navbar-expand-lg navbar-light pb-4 mb-4">
