--- a/conta.html
+++ b/conta.html
@@ -61,57 +61,61 @@
         <li class="nav-item">
           <a class="nav-link ativo" href="conta.html">Cadastrar<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="login.html">Login<span class="sr-only">(current)</span></a>
+        <li class="nav-item" id="login" style="display: none;">
+          <a class="nav-link ativo" href="login.html">Login<span class="sr-only">(current)</span></a>
         </li>
-      </ul>
-    </div>
-  </nav>
-  <h2 class="subtitulo">Cadastre-se</h2>
-  <div class="container-fluid">
-    <div class="conta">
-      <form onsubmit="enviaformulario(this)">
-        <div class="form-group">
-          <label for="Nome">Nome</label>
-          <input type="text" class="form-control" id="nomeusuaria"  placeholder="Nome" required>
-        </div>
-        <div class="form-group">
-          <label for="idade">Idade</label>
-          <input type="number" class="form-control" id="idade" placeholder="Idade" required>
-        </div>
-        <div class="form-group">
-          <label for="email">E-mail</label>
-          <input type="email" class="form-control" id="email"  placeholder="E-mail" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Senha</label>
-          <input type="password" class="form-control" id="password" placeholder="Senha" required>
-        </div>
-        
-        <button type="submit" class="btn btn-primary">Enviar</button>
-      </form>
-    </div>
+        <li class="nav-item" id="logout" style="display: none;">
+          <a class="nav-link ativo" onclick="logout();">Logout<span class="sr-only">(current)</span></a>
+        </li>
+      </li>
+    </ul>
   </div>
-
-
-  <div id="rodape">
-    <h3 class="texto_contato"> Contato </h3>
-    <a href="mailto:contatoisy.site@gmail.com"> 
-      <img src="img/email.svg" id="imge"> 
-      <p id="textoR">Envie um e-mail para ISY</p>
-    </a>
-
+</nav>
+<h2 class="subtitulo">Cadastre-se</h2>
+<div class="container-fluid">
+  <div class="conta">
+    <form onsubmit="enviaformulario(this)">
+      <div class="form-group">
+        <label for="Nome">Nome</label>
+        <input type="text" class="form-control" id="nomeusuaria"  placeholder="Nome" required>
+      </div>
+      <div class="form-group">
+        <label for="idade">Idade</label>
+        <input type="number" class="form-control" id="idade" placeholder="Idade" required>
+      </div>
+      <div class="form-group">
+        <label for="email">E-mail</label>
+        <input type="email" class="form-control" id="email"  placeholder="E-mail" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Senha</label>
+        <input type="password" class="form-control" id="password" placeholder="Senha" required>
+      </div>
+      
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
   </div>
+</div>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-  crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-  crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-  crossorigin="anonymous"></script>
+
+<div id="rodape">
+  <h3 class="texto_contato"> Contato </h3>
+  <a href="mailto:contatoisy.site@gmail.com"> 
+    <img src="img/email.svg" id="imge"> 
+    <p id="textoR">Envie um e-mail para ISY</p>
+  </a>
+
+</div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+crossorigin="anonymous"></script>
 </body>
 
 </html>
