--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
 				<li class="nav-item ">
 					<a class="nav-link" href="conta.html">Cadastrar<span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item ">
-					<a class="nav-link" href="login.html">Login<span class="sr-only">(current)</span></a>
+				<li class="nav-item" id="login" style="display: none;">
+					<a class="nav-link ativo" href="login.html">Login<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item" id="logout" style="display: none;">
+					<a class="nav-link ativo" onclick="logout();">Logout<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
 		</div>
