--- a/conta.html
+++ b/conta.html
@@ -17,8 +17,13 @@
     crossorigin="anonymous"></script>
 
 
-  <link href="css/style.css" rel="stylesheet">
+  <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
+  <script src="scripts/env.js"> </script>
   <script src="scripts/script.js"> </script>
+  <link href="css/style.css" rel="stylesheet">
+
 
   <title>ISY</title>
   <link rel="icon" type="imagem/png" href="img/icon.png" />
